--- a/home.css
+++ b/home.css
@@ -358,7 +358,7 @@
   }
 
   .upload footer>.bottom>.right {
-    display: none;
+    display:inline;
   }
 
   .upload footer>.bottom>.right p {
@@ -426,6 +426,7 @@
 
 .news_cont .left img {
   width: 100%;
+  height: 100%;
 }
 
 .news_cont>.right {
@@ -459,14 +460,14 @@
 
 }
 
-.footer_cont>header svg {
-  transform: scale(-1, 1);
+.footer_cont > header svg {
+  transform: scale(-1,1);
   width: 100vw;
   height: calc(100vw / 12);
   fill: var(--deep-blue-2);
 }
 
-.footer_cont>main {
+.footer_cont > main {
   background: var(--deep-blue-2);
   display: flex;
   gap: 20px;
@@ -474,18 +475,18 @@
   align-items: center;
 }
 
-.footer_cont>main .left {
+.footer_cont > main .left {
   width: 50%;
   padding: 0 60px 0 20px;
 }
 
-.footer_cont>main .left h2 {
+.footer_cont > main .left h2 {
   color: white;
   font-size: 4rem;
   margin-bottom: 40px;
 }
 
-.footer_cont>main .left p {
+.footer_cont > main .left p {
   color: var(--container-white);
   opacity: 80%;
   font-size: 1.2rem;
@@ -495,10 +496,9 @@
 
 .footer_cont main .middle {
   width: 20%;
-
 }
 
-.footer_cont>main>.middle h4 {
+.footer_cont > main > .middle h4 {
   font-size: 2rem;
   color: #fff;
   margin-bottom: 20px;
@@ -534,11 +534,11 @@
 
 
 
+
 .footer_cont main .right {
   width: 30%;
   color: var(--container-white-low);
   display: flex;
-  flex-wrap: wrap;
   flex-direction: column;
 }
 
@@ -562,8 +562,7 @@
 
 .footer_cont main .right .middle ul {
   display: flex;
-  flex-direction: row;
-  gap: 25px;
+  gap: 50px;
 }
 
 .footer_cont main .right .middle ul li {
@@ -600,6 +599,7 @@
   display: flex;
   list-style-type: none;
   gap: 25px;
+  margin-left: 25px;
   margin-top: 20px;
 }
 
@@ -690,6 +690,7 @@
 
   .footer_cont main .right {
     top: 10px;
+    width: 100%;
   }
 
   .footer_cont main .right .middle {
@@ -705,10 +706,11 @@
 
   .footer_cont main .right .middle ul,
   .footer_cont main .right .bottom ul {
-    justify-content: space-evenly;
+    justify-content: space-around;
     display: flex;
     list-style-type: none;
     gap: 30px;
+    margin-left: 0px;
     /* margin-top: 20px; */
     align-items: center;
   }
@@ -727,7 +729,7 @@
 }
 
 .back-to-top {
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: center;
   position: fixed;
@@ -739,14 +741,14 @@
   border-radius: 50%;
   background-color: transparent;
   border: none;
+  transition: background-color 0.3s;
 }
 
 .back-to-top svg {
-  width: 40px;
-  height: 40px;
-  
+ fill: var(--deep-blue);
 }
 
 .back-to-top:hover {
   background-color: #7db7e4;
 }
+
