--- a/config.css
+++ b/config.css
@@ -564,6 +564,7 @@ cursor: pointer;
 
 .upload footer>.top {
   height: 85px;
+  height: fit-content;
   padding: 8px 12px;
   font-size: 1.2rem;
   background: white;
@@ -588,6 +589,7 @@ cursor: pointer;
 .upload__class footer > .top .right {
   display: flex;
   align-items: center;
+  flex-direction: row;
 }
 
 .rating {
@@ -627,7 +629,8 @@ cursor: pointer;
   display: flex;
   flex-direction: row;
   padding: 15px;
-  justify-content: space-evenly;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .upload footer>.bottom>.left {
@@ -658,11 +661,15 @@ cursor: pointer;
 
 .upload footer>.bottom>.left>.right p {
   font-size: 0.7rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 
 .upload footer>.bottom>.right {
   display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   gap: 5px;
@@ -827,11 +834,11 @@ cursor: pointer;
   border-radius: 50%;
 }
 
-h2 {
+/* h2 {
   text-align: center;
   margin-bottom: 0px;
   color: #333;
-}
+} */
 
 .profile-top {
   margin-top: 10px;
@@ -977,7 +984,6 @@ h2 {
 
 .rating {
   display: flex;
-  gap: 10px;
 }
 .upload-btn {
   width: 100%;
@@ -1057,11 +1063,17 @@ h2 {
   }
   
   .upload__class footer > .top .right{
-    height: 50px;
+    height: 1em;
     width: 50%;
+    position: absolute;
+  width: max-content;
+  top: -1em;
+  right: 0;
+  background: #fff;
+  padding: 4px;
   }
   .rating svg {
-    width: 15px;
+    width: 12.5px !important; 
   }
   
 }
