--- a/home.css
+++ b/home.css
@@ -70,9 +70,6 @@
 }
 
 
-.search_bar_mobile {
-  display: none; /* Hide the element by default */
-}
 
 @media screen and (max-width: 600px) {
   .home-image-cont {
@@ -113,80 +110,7 @@
     margin-bottom: 20px;
   }
 
-  .search_mobile {
-    display: flex;
-    align-items: center;
-    background-color: #f8f8f8;
-    padding: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    height: 48px; /* Adjust the height as needed */
-  }
   
-  .search_bar_mobile {
-    width: 60%;
-    position: fixed;
-    z-index: 10;
-    top: 20px;
-    display: flex;
-    align-items: center;
-    background-color: #fff;
-    border-radius: 12px;
-    padding: 5px;
-  }
-
-  .search-input-mobile {
-    width: 100%;
-    border: none;
-    padding: 10px;
-    outline: none;
-    font-size: small;
-    background-color: transparent;
-    border-radius: 20px;
-    color: #333333;
-  }
-  
-  .search-input-mobile::placeholder {
-    color: #999999;
-  }
-  
-  .search-input-mobile:hover {
-    width: 100%;
-  }
-  
-  .search-icon {
-    background-color: transparent;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    padding: 5px;
-    margin-left: 5px;
-    transition: transform 0.3s;
-  }
-  
-  .search-icon::after {
-    content: '\f002';
-    font-family: 'Font Awesome 5 Free';
-    font-weight: 900;
-    color: #999999;
-    transition: transform 0.3s;
-  }
-  
-  .search-icon.active::after {
-    transform: rotate(45deg);
-    color: var(--light-sky-blue);
-  }
-
-  .bottom-nav{
-    top: 33px;
-    right: 74px;
-    background: none;
-    padding: 0px;
-    border-radius: 0 0 0 0;
-  }
-  .bottom-nav > ul {
-    gap: 15px;
-  }
-
 }  
 
 
@@ -270,7 +194,6 @@
 }
 
 @media screen and (max-width: 600px) {
-
   
   .home_small-cont {
     padding: 10px;
@@ -279,13 +202,12 @@
 
   .home_small-cont>header {
     margin-bottom: 20px;
-    margin-left: 0;
+    margin-left: 5px;
   }
 
   .home_small-cont>header h2 {
-    margin-top: 7.5px;
-    font-size: 1.3rem;
-    margin-left: 0;
+    margin-top: 10px;
+    font-size: 1.6rem;
   }
 
   .recent_cont>main {
@@ -327,7 +249,6 @@
   .upload footer>.top {
     padding: 5px 10px;
     height: 50px;
-    height: fit-content;
   }
 
   .upload footer>.top h4 {
@@ -339,11 +260,11 @@
   }
 
   .upload footer>.bottom {
-    padding: 7.5px;
+    padding: 15px 10px;
   }
 
   .upload footer>.bottom>.left {
-    width: 80%;
+    width: 100%;
   }
 
   .upload footer>.bottom .left img {
@@ -351,38 +272,21 @@
     height: 30px;
   }
 
-  .upload footer > .bottom > .left > .right {
-    margin-left: 5px;
-  }
-
   .upload footer>.bottom>.left>.right h4 {
-    font-size: .7rem;
+    font-size: .8rem;
     font-weight: 400;
   }
 
   .upload footer>.bottom>.left>.right p {
-    font-size: .45rem;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    width: 80%;
+    font-size: .5rem;
   }
 
   .upload footer>.bottom>.right {
-    display: inline-block;
-    display: flex;
-    height: 17.5px; 
-    gap: 2px;
-  }
-
-  .upload footer>.bottom>.right svg {
-    width: 17.5px;
-    height: 17.5px;
+    display:inline;
   }
 
   .upload footer>.bottom>.right p {
-    font-size: .5rem;
-    text-align: center;
+    font-size: .8rem;
   }
 
   .home_small-cont>main .show-more {
@@ -458,7 +362,6 @@
   font-size: 5rem;
   color: var(--deep-blue);
   margin-bottom: 20px;
-  width: max-content;
 }
 
 @media screen and (max-width: 600px) {
@@ -486,7 +389,6 @@
   width: 100vw;
   height: calc(100vw / 12);
   fill: var(--deep-blue-2);
-  top: 2px
 }
 
 .footer_cont > main {
@@ -735,17 +637,6 @@
     margin-left: 0px;
     /* margin-top: 20px; */
     align-items: center;
-  }
-}
-
-
-@media screen and (max-width: 400px) {
-  .upload footer>.bottom>.left>.right h4 {
-    font-size: .6rem;
-  }
-
-  .upload footer>.bottom>.left>.right p {
-    font-size: .4rem;
   }
 }
 
