--- a/subjects_chapters.css
+++ b/subjects_chapters.css
@@ -96,6 +96,7 @@
     bottom: 5px;
     right: 0;
     width: 80px;
+    flex-direction: row;
 }
 
 .info_bar div {
@@ -131,6 +132,7 @@
 
 .subject footer > .bottom {
     padding: 15px;
+    justify-content: flex-start;
 }
 
 .subject footer .bottom .left {
@@ -155,6 +157,7 @@
 
 .subject footer .bottom .left {
     width: min-content;
+    width: 100%;
 }
 
 .subject footer .bottom .left svg {
