--- a/home.css
+++ b/home.css
@@ -55,7 +55,7 @@
 .home-image-cont .left .left-main-cont footer .upload_btn {
   margin-top: 40px;
   margin-bottom: 10px;
-  ;
+  padding: 10px 15px;
   border-radius: 8px;
   background: var(--deep-blue);
   border: none;
