--- a/subjects_chapters.css
+++ b/subjects_chapters.css
@@ -169,7 +169,53 @@
     color: var(--paste-green);
 }
 
+/* Responsive Styles */
+@media screen and (max-width: 600px) {
+    .subject__cont {
+        top: 3vh;
+    }
+    .subject__cont > main {
+        margin-top: 0;
+    }
+    .subject__cont > header > .top {
+        gap: 15px;
+}
+    .info-box {
+        width: 45%;
+        padding: 10px;
+        font-size: 1rem
+}
+    .subject__cont header .bottom {
+        width: 94%;
+    
+}
+.subjects ul {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 0px;
+    justify-content: space-between;
+    align-items: center;
+    gap: 5px;
+    padding: 10px;
+}
+.upload {
+    flex-basis: 49%;
+    margin-bottom: 10px;
+    border-radius: 8px;
+}
+.upload header img {
+    height: 200px;
+    width: 100%;
+    object-fit: cover;
+}
+.subject footer .top {
+    padding: 5px;
+}
+.subject__cont > footer {
+    padding: 10px;
+    display: flex;
+    justify-content: space-around;
+}
 
-
-
+}
 
