--- a/subjects_chapters.css
+++ b/subjects_chapters.css
@@ -174,6 +174,9 @@
     .subject__cont {
         top: 3vh;
     }
+    .header-description {
+        text-align: center;
+    }
     .subject__cont > main {
         margin-top: 0;
     }
